infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-marketplace-ingress
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /cars
            pathType: Prefix
            backend:
              service:
                name: listing-service
                port:
                  number: 80
